Add Makefile for builds

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-keys.tfvars*
-keys-*.tfvars*
-*.bak
-*.keys
-crash.log
-*.tfplan*
+build
 *.pem
 *.key
 .DS_Store
 .vagrant
 .git
-.registryrc
-state/
-terraform.tfstate.backup
-terraform.tfstate
-network.tf
-network.tfvars
-tmp/
