Update Makefile, fix vpc destroy

--- a/coreos-cluster/vpc/Makefile
+++ b/coreos-cluster/vpc/Makefile
@@ -5,18 +5,31 @@ clean:
 	# let top level do the clean job
 
 # Terraform Targets
-plan:
+plan: | init
 	$(TF_PLAN)
 
 apply: | plan
 	$(TF_APPLY); $(SCRIPTS)/gen-network-tfvars.sh
 
-destroy_plan:
-	$(TF_DESTROY_PLAN); cat /dev/null > network.tfvars; cat /dev/null > network.tf
+destroy_plan: | init
+	$(TF_DESTROY_PLAN)
 
 destroy: | destroy_plan
-	test -s $(TF_DESTROY_PLAN_FILE) || { echo "Noting to destroy"; exit 0; } ; \
-		$(TF_DESTROY_APPLY); rm -f $(TF_DESTROY_PLAN_FILE)
+	if [ -a $(TF_DESTROY_PLAN_FILE) ]; \
+	then \
+		$(TF_DESTROY_APPLY); \
+		rm -f $(TF_DESTROY_PLAN_FILE); \
+		cat /dev/null > $(TF_COMMON)/network.tf; \
+		cat /dev/null > $(TF_COMMON)/network.tfvars; \
+	else \
+		echo "Noting to destroy"; \
+	fi
 
-show:
+
+show: | init
 	$(TF_SHOW)
+
+init: 
+	ln -s -f $(TF_COMMON)/override.tf override.tf
+	ln -s -f $(TF_COMMON)/variables.tf variables.tf
+	ln -s -f $(TF_COMMON)/provider.tf provider.tf
