fix vpc iam route53

--- a/coreos-cluster/iam/Makefile
+++ b/coreos-cluster/iam/Makefile
@@ -9,7 +9,7 @@ plan: | init
 	$(TF_PLAN)
 
 apply: | plan
-	$(TF_APPLY); $(SCRIPTS)/gen-vpc-vars.sh
+	$(TF_APPLY)
 
 destroy_plan: | init
 	$(TF_DESTROY_PLAN)
@@ -19,8 +19,6 @@ destroy: | destroy_plan
 	then \
 		$(TF_DESTROY_APPLY); \
 		rm -f $(TF_DESTROY_PLAN_FILE); \
-		cat /dev/null > $(TF_COMMON)/vpc.tf; \
-		cat /dev/null > $(VPC_VARS); \
 	else \
 		echo "Noting to destroy"; \
 	fi
@@ -29,10 +27,10 @@ show: | init
 	$(TF_SHOW)
 
 refresh: | init
-	$(TF_REFRESH) --var-file=$(VPC_VARS)
-	$(SCRIPTS)/gen-vpc-vars.sh
+	$(TF_REFRESH) 
 
 init: 
 	ln -s -f $(TF_COMMON)/override.tf override.tf
 	ln -s -f $(TF_COMMON)/variables.tf variables.tf
 	ln -s -f $(TF_COMMON)/provider.tf provider.tf
+	$(SCRIPTS)/substitute-AWS-ACCOUNT.sh
