--- a/coreos-cluster/etcd/Makefile
+++ b/coreos-cluster/etcd/Makefile
@@ -33,4 +33,4 @@ init:
 	ln -s -f $(TF_COMMON)/override.tf override.tf
 	ln -s -f $(TF_COMMON)/variables.tf variables.tf
 	ln -s -f $(TF_COMMON)/provider.tf provider.tf
-	ln -s -f $(TF_COMMON)/network.tf network.tf
+	ln -s -f $(TF_COMMON)/vpc-vars.tf vpc-vars.tf
