add iam for deployment user and keys; add etcd

--- a/coreos-cluster/etcd/Makefile
+++ b/coreos-cluster/etcd/Makefile
@@ -10,6 +10,7 @@ plan: | init
 
 apply: | plan
 	$(TF_APPLY) --var-file=$(VPC_VARS);
+	echo "EC2 public ips: `$(SCRIPTS)/get-ec2-public-id.sh etcd`"
 
 destroy_plan: | init
 	$(TF_DESTROY_PLAN) --var-file=$(VPC_VARS)
@@ -25,6 +26,7 @@ destroy: | destroy_plan
 
 show: | init
 	$(TF_SHOW)
+	echo "EC2 public ips: `$(SCRIPTS)/get-ec2-public-id.sh etcd`"
 
 refresh: | init
 	$(TF_REFRESH) --var-file=$(VPC_VARS)
@@ -34,3 +36,5 @@ init:
 	ln -s -f $(TF_COMMON)/variables.tf variables.tf
 	ln -s -f $(TF_COMMON)/provider.tf provider.tf
 	ln -s -f $(TF_COMMON)/vpc-vars.tf vpc-vars.tf
+	# create ec2 keypaire and upload to ${AWS_ACCOUNT}-coreos-cluster-config/keypairs/
+	$(SCRIPTS)/create-and-upload-keypair.sh etcd
