modified:   coreos-cluster/vpc/vpc-net.tf 	fix the etcd-sg to allow access from etcd proxies modified:   coreos-cluster/worker/Makefile modified:   coreos-cluster/worker/cloud-config/s3-cloudconfig-bootstrap.sh modified:   coreos-cluster/worker/user-data.files modified:   scripts/gen-userdata.sh 	fix scripts for workers' 2-stage cloud-init modified:   coreos-cluster/worker/worker_policy.json 	allow list/get on "arn:aws:s3:::AWS-ACCOUNT-coreos-cluster-cloudinit"

--- a/coreos-cluster/worker/Makefile
+++ b/coreos-cluster/worker/Makefile
@@ -43,4 +43,4 @@ init:
 	# create ec2 keypaire and upload to s3://AWS_ACCOUNT-coreos-cluster-config/keypairs/
 	$(SCRIPTS)/create-and-upload-keypair.sh $(EC2_ROLE)
 	# create user-data and upload to s3://AWS_ACCOUNT-coreos-cluster-config/worker/cloud-config.yaml
-	$(SCRIPTS)/substitute-AWS-ACCOUNT.sh
+	$(SCRIPTS)/gen-userdata.sh $(PROFILE_NAME) $(EC2_ROLE)
