--- a/coreos-cluster/worker/cloud-config/worker.yaml
+++ b/coreos-cluster/worker/cloud-config/worker.yaml
@@ -6,7 +6,7 @@ coreos:
     proxy: on
   fleet:
     public-ip: $private_ipv4
-    metadata: "platform=ec2,provider=aws,region=us-west-2,role=sites,env=mylab"
+    metadata: "disk=ssd,env=coreos-cluster,platform=ec2,provider=aws,region=us-west-2,role=worker"
   update:
     reboot-strategy: off
   units:
