use two-stage cloud-init for etcd, this allow more flexible cloud-init code

--- a/coreos-cluster/etcd/Makefile
+++ b/coreos-cluster/etcd/Makefile
@@ -1,4 +1,3 @@
-
 all: apply
 
 clean:
@@ -9,8 +8,13 @@ plan: | init
 	$(TF_PLAN)  --var-file=$(VPC_VARS)
 
 apply: | plan
+	# create ec2 keypaire and upload to s3://AWS_ACCOUNT-coreos-cluster-config/keypairs/
+	$(SCRIPTS)/create-and-upload-keypair.sh $(GOAL)
+	# create user-data and upload to s3://AWS_ACCOUNT-coreos-cluster-config/worker/cloud-config.yaml
+	$(SCRIPTS)/gen-userdata.sh $(PROFILE_NAME) $(GOAL)
+	#terraform apply
 	$(TF_APPLY) --var-file=$(VPC_VARS);
-	echo "EC2 public ips: `$(SCRIPTS)/get-ec2-public-id.sh etcd`"
+	$(MAKE) show_ip
 
 destroy_plan: | init
 	$(TF_DESTROY_PLAN) --var-file=$(VPC_VARS)
@@ -26,7 +30,11 @@ destroy: | destroy_plan
 
 show: | init
 	$(TF_SHOW)
-	echo "EC2 public ips: `$(SCRIPTS)/get-ec2-public-id.sh etcd`"
+	$(MAKE) show_ip
+
+show_ip:
+	echo "$(GOAL) public ips: " `$(SCRIPTS)/get-ec2-public-id.sh $(GOAL)`
+
 
 refresh: | init
 	$(TF_REFRESH) --var-file=$(VPC_VARS)
@@ -36,6 +44,8 @@ init:
 	ln -s -f $(TF_COMMON)/variables.tf variables.tf
 	ln -s -f $(TF_COMMON)/provider.tf provider.tf
 	ln -s -f $(TF_COMMON)/vpc-vars.tf vpc-vars.tf
-	# create ec2 keypaire and upload to ${AWS_ACCOUNT}-coreos-cluster-config/keypairs/
-	$(SCRIPTS)/create-and-upload-keypair.sh etcd
+	# fix AWS-ACCOUNT with aws account id in all tf and json files
 	$(SCRIPTS)/substitute-AWS-ACCOUNT.sh
+
+
+.PHONY: all apply destroy_plan destroy show show_ip show_ip refresh init
