--- a/coreos-cluster/worker/Makefile
+++ b/coreos-cluster/worker/Makefile
@@ -1,6 +1,3 @@
-
-EC2_ROLE=worker
-
 all: apply
 
 clean:
@@ -11,8 +8,13 @@ plan: | init
 	$(TF_PLAN)  --var-file=$(VPC_VARS)
 
 apply: | plan
+	# create ec2 keypaire and upload to s3://AWS_ACCOUNT-coreos-cluster-config/keypairs/
+	$(SCRIPTS)/create-and-upload-keypair.sh $(GOAL)
+	# create user-data and upload to s3://AWS_ACCOUNT-coreos-cluster-config/worker/cloud-config.yaml
+	$(SCRIPTS)/gen-userdata.sh $(PROFILE_NAME) $(GOAL)
+	# terraform apply
 	$(TF_APPLY) --var-file=$(VPC_VARS);
-	echo "EC2 public ips: `$(SCRIPTS)/get-ec2-public-id.sh $(EC2_ROLE)`"
+	$(MAKE) show_ip
 
 destroy_plan: | init
 	$(TF_DESTROY_PLAN) --var-file=$(VPC_VARS)
@@ -28,7 +30,10 @@ destroy: | destroy_plan
 
 show: | init
 	$(TF_SHOW)
-	echo "EC2 public ips: `$(SCRIPTS)/get-ec2-public-id.sh $(EC2_ROLE)`"
+	$(MAKE) show_ip
+
+show_ip:
+	echo "$(GOAL) public ips: " `$(SCRIPTS)/get-ec2-public-id.sh $(GOAL)`
 
 refresh: | init
 	$(TF_REFRESH) --var-file=$(VPC_VARS)
@@ -40,7 +45,5 @@ init:
 	ln -s -f $(TF_COMMON)/vpc-vars.tf vpc-vars.tf
 	# fix AWS-ACCOUNT with aws account id in all tf and json files
 	$(SCRIPTS)/substitute-AWS-ACCOUNT.sh
-	# create ec2 keypaire and upload to s3://AWS_ACCOUNT-coreos-cluster-config/keypairs/
-	$(SCRIPTS)/create-and-upload-keypair.sh $(EC2_ROLE)
-	# create user-data and upload to s3://AWS_ACCOUNT-coreos-cluster-config/worker/cloud-config.yaml
-	$(SCRIPTS)/gen-userdata.sh $(PROFILE_NAME) $(EC2_ROLE)
+
+.PHONY: all apply destroy_plan destroy show show_ip show_ip refresh init
