--- a/coreos-cluster/tfcommon/cloud-config/files.yaml
+++ b/coreos-cluster/tfcommon/cloud-config/files.yaml
@@ -33,4 +33,4 @@ write_files:
   - path: /etc/systemd/system/docker.service.d/50-insecure-registry.conf
     content: |
         [Service]
-        Environment=DOCKER_OPTS='--insecure-registry=dockerhub.coreos-cluster.local --insecure-registry=10.0.0.0/8'
+        Environment=DOCKER_OPTS='--insecure-registry=10.0.0.0/8,dockerhub.coreos-cluster.local'
