--- a/coreos-cluster/tfcommon/cloud-config/files.yaml
+++ b/coreos-cluster/tfcommon/cloud-config/files.yaml
@@ -30,7 +30,32 @@ write_files:
         docker history $IMAGE > /dev/null 2>&1 || docker pull $IMAGE
         # sync s3 apps to
         docker run --rm --name s3sync -v ${DST}:${DST} --env-file=$AWS_CONFIG_ENV $IMAGE /bin/bash -c "$CMD"
+  - path: /opt/bin/update-window.sh
+    permissions: 0700
+    owner: root
+    content: |
+        #!/bin/bash
+        
+        # If etcd is active, this uses locksmith. Otherwise, it randomly delays the reboot. 
+        delay=$(/usr/bin/expr $RANDOM % 3600 )
+        rebootflag='NEED_REBOOT'
+        
+        if update_engine_client -status | grep $rebootflag;
+        then
+            echo -n "etcd is "
+            if systemctl is-active etcd;
+            then
+                echo "Update reboot with locksmithctl."
+                locksmithctl reboot
+            else
+                echo "Update reboot in $delay seconds."
+                sleep $delay
+                reboot
+            fi
+        fi
+        exit 0
   - path: /etc/systemd/system/docker.service.d/50-insecure-registry.conf
     content: |
         [Service]
         Environment=DOCKER_OPTS='--insecure-registry=10.0.0.0/8,dockerhub.coreos-cluster.local'
+
