add waiting time in coreos-cluster/elb/cert.tf to workaround the aws propagate delay problem

--- a/coreos-cluster/elb/Makefile
+++ b/coreos-cluster/elb/Makefile
@@ -9,8 +9,7 @@ clean:
 plan: | init
 	$(TF_PLAN) --var-file=$(VPC_VARS) --var-file=$(R53_VARS)
 
-
-apply: | plan
+apply: | init
 	# terraform apply
 	$(TF_APPLY) --var-file=$(VPC_VARS) --var-file=$(R53_VARS)
 
