--- a/coreos-cluster/route53/Makefile
+++ b/coreos-cluster/route53/Makefile
@@ -5,7 +5,7 @@ all: apply
 plan: | init
 	$(TF_PLAN) --var-file=$(VPC_VARS);
 
-apply: | plan
+apply: | init
 	$(TF_APPLY) --var-file=$(VPC_VARS);
 
 destroy_plan: | init
@@ -27,8 +27,13 @@ show: | init
 refresh: | init
 	$(TF_REFRESH) --var-file=$(VPC_VARS)
 
-init: 
+init: | $(VPC_VARS)
 	ln -s -f $(TF_COMMON)/override.tf override.tf
 	ln -s -f $(TF_COMMON)/variables.tf variables.tf
 	ln -s -f $(TF_COMMON)/provider.tf provider.tf
 	ln -s -f $(VPC_VARS_TF) vpc-vars.tf
+
+$(VPC_VARS):
+	$(MAKE) -C $(ROOT_DIR) vpc apply
+
+.PHONY: all apply destroy_plan destroy show refresh init $(VPC_VARS)
