dockerhub is up

--- a/coreos-cluster/s3/Makefile
+++ b/coreos-cluster/s3/Makefile
@@ -4,6 +4,8 @@ all: apply
 # Terraform Targets
 plan: | init
 	$(TF_PLAN)
+	# wait for a while for s3 to propagate
+	# sleep 180
 
 apply: | init
 	$(TF_APPLY)
