--- a/coreos-cluster/dockerhub/cloud-config/dockerhub.yaml
+++ b/coreos-cluster/dockerhub/cloud-config/dockerhub.yaml
@@ -1,11 +1,14 @@
 #cloud-config
 
-coreos: 
+# Dockerhub cloud-config
+coreos:
   etcd2:
     proxy: on
   fleet:
     public-ip: $private_ipv4
-    metadata: "platform=ec2,provider=aws,region=us-west-2,disk=ssd,role=dockerhub,env=mylab"
+    metadata: "disk=ssd,env=coreos-cluster,platform=ec2,provider=aws,region=us-west-2,role=dockerhub"
+  update:
+    reboot-strategy: off
   units:
     - name: etcd2.service
       command: start
@@ -15,6 +18,19 @@ coreos:
             [Service]
             EnvironmentFile=/etc/sysconfig/initial-cluster
     - name: fleet.service
-      command: reload-or-restart
-
-      
+      command: start
+    - name: update-window.service
+      command: start
+      content: |
+        [Unit]
+        Description=Reboot if an update has been downloaded
+        ConditionPathExists=/opt/bin/update-window.sh
+        [Service]
+        ExecStart=/opt/bin/update-window.sh
+    - name: update-window.timer
+      command: start
+      content: |
+        [Unit]
+        Description=Reboot timer
+        [Timer]
+        OnCalendar=*-*-* 05,06:00/30:00
