--- a/resources/cloud-config/admiral.yaml
+++ b/resources/cloud-config/admiral.yaml
@@ -5,7 +5,7 @@ coreos:
     proxy: on
   fleet:
     public-ip: $private_ipv4
-    metadata: "env=coreos-cluster,platform=ec2,provider=aws,region=us-west-2,role=admiral"
+    metadata: "env=CLUSTER-NAME,platform=ec2,provider=aws,region=us-west-2,role=admiral"
   update:
     reboot-strategy: off
   units:
