--- a/resources/cloud-config/etcd-aws-cluster.yaml
+++ b/resources/cloud-config/etcd-aws-cluster.yaml
@@ -3,7 +3,7 @@ coreos:
   etcd2:
     advertise-client-urls: http://$private_ipv4:2379
     initial-advertise-peer-urls: http://$private_ipv4:2380
-    listen-client-urls: http://0.0.0.0:2379
+    listen-client-urls: http://0.0.0.0:2379,http://0.0.0.0:4001
     listen-peer-urls: http://$private_ipv4:2380
   fleet:
     metadata: env=CLUSTER-NAME,platform=ec2,provider=aws,region=us-west-2,role=etcd2
