add cloud-config/systemd-units-flannel.yaml for nodes that need a docker overlay network

--- a/resources/cloud-config/systemd-units-flannel.yaml
+++ b/resources/cloud-config/systemd-units-flannel.yaml
@@ -1,5 +1,12 @@
 
 # coreos.units.* components
+    - name: flanneld.service
+      command: start
+      drop-ins:
+        - name: 50-network-config.conf
+          content: |
+            [Service]
+            ExecStartPre=/usr/bin/etcdctl set /coreos.com/network/config '{ "Network": "10.1.0.0/16" }'
     - name: format-disk.service
       command: start
       content: |
@@ -69,3 +76,4 @@
         RemainAfterExit=true
         EnvironmentFile=/etc/environment
         ExecStart=/opt/bin/post-provision.sh
+
