--- a/resources/cloud-config/admiral.yaml
+++ b/resources/cloud-config/admiral.yaml
@@ -6,7 +6,7 @@ coreos:
     listen-client-urls: http://0.0.0.0:2379,http://0.0.0.0:4001
   fleet:
     public-ip: $private_ipv4
-    metadata: "env=CLUSTER-NAME,platform=ec2,provider=aws,region=us-west-2,role=admiral"
+    metadata: "env=CLUSTER-NAME,platform=ec2,provider=aws,role=admiral"
   update:
     reboot-strategy: off
   units:
