--- a/resources/cloud-config/worker.yaml
+++ b/resources/cloud-config/worker.yaml
@@ -7,7 +7,7 @@ coreos:
     listen-client-urls: http://0.0.0.0:2379,http://0.0.0.0:4001
   fleet:
     public-ip: $private_ipv4
-    metadata: "env=CLUSTER-NAME,platform=ec2,provider=aws,region=us-west-2,role=worker"
+    metadata: "env=CLUSTER-NAME,platform=ec2,provider=aws,role=worker"
   update:
     reboot-strategy: off
   units:
