--- a/resources/cloud-config/gocd.yaml
+++ b/resources/cloud-config/gocd.yaml
@@ -35,31 +35,6 @@ coreos:
         Description=Reboot timer
         [Timer]
         OnCalendar=*-*-* 05,06:00/30:00
-    - name: hello.service
-      command: start
-      content: |
-        [Unit]
-        Description=Hello World
-        
-        After=docker.service
-        Requires=docker.service
-        
-        # Dependency ordering
-        After=gocd.service
-        # Requirements        
-        Requires=gocd.service
-        
-        [Service]
-        # Let processes take awhile to start up (for first run Docker containers)
-        TimeoutStartSec=0
-        # Change killmode from "control-group" to "none" to let Docker remove
-        # work correctly.
-        KillMode=none
-        EnvironmentFile=/etc/environment
-        ExecStartPre=/usr/bin/etcdctl set /test/%m ${COREOS_PUBLIC_IPV4}
-        ExecStart=/usr/bin/docker run --name test --rm busybox /bin/sh -c "while true; do echo Hello World; sleep 1; done"
-        ExecStop=/usr/bin/etcdctl rm /test/%m
-        ExecStop=/usr/bin/docker kill test        
     - name: gocd.service
       command: start
       content: |
@@ -70,7 +45,7 @@ coreos:
         [Service]
         EnvironmentFile=/etc/environment
         TimeoutStartSec=0
-        ExecStartPre=/var/lib/apps/bin/dkpull gocd/gocd-server:16.1.0
+        ExecStartPre=/usr/bin/docker pull gocd/gocd-server:16.1.0
         ExecStartPre=-/usr/bin/docker rm %n
         ExecStart=/usr/bin/sh -c "/usr/bin/docker run --rm --name %n -p 8153:8153 -e AGENT_KEY=123456789abcdef gocd/gocd-server:16.1.0"
         ExecStop=/usr/bin/docker stop %n
@@ -92,7 +67,7 @@ coreos:
         # Change killmode from "control-group" to "none" to let Docker remove
         # work correctly.
         KillMode=none        
-        ExecStartPre=/var/lib/apps/bin/dkpull gocd/gocd-agent:16.1.0
+        ExecStartPre=/usr/bin/docker pull gocd/gocd-agent:16.1.0
         ExecStartPre=-/usr/bin/docker rm %n
         ExecStart=/usr/bin/sh -c "/usr/bin/docker run --rm --name %n -e AGENT_KEY=123456789abcdef --link gocd.service:go-server gocd/gocd-agent:16.1.0"
         ExecStop=-/usr/bin/docker stop %n
