--- a/resources/cloud-config/files.yaml
+++ b/resources/cloud-config/files.yaml
@@ -22,14 +22,14 @@ write_files:
         AWS_CONFIG_ENV=/root/.aws/envvars
         source $AWS_CONFIG_ENV
         IMAGE=suet/awscli:latest
-        APPBUCKET=s3://${AWS_ACCOUNT}-coreos-cluster-config/apps
+        APPBUCKET=s3://$${AWS_ACCOUNT}-coreos-cluster-config/apps
         DST=/var/lib/apps
-        CMD="aws s3 sync --exact-timestamps --delete $APPBUCKET $DST && chmod 755 ${DST}/bin/*"
+        CMD="aws s3 sync --exact-timestamps --delete $APPBUCKET $DST && chmod 755 $${DST}/bin/*"
         
         # pull the IMAGE if not loaded
         docker history $IMAGE > /dev/null 2>&1 || docker pull $IMAGE
         # sync s3 apps to
-        docker run --rm --name s3sync -v ${DST}:${DST} --env-file=$AWS_CONFIG_ENV $IMAGE /bin/bash -c "$CMD"
+        docker run --rm --name s3sync -v $${DST}:$${DST} --env-file=$AWS_CONFIG_ENV $IMAGE /bin/bash -c "$CMD"
   - path: /opt/bin/post-provision.sh
     permissions: 0700
     owner: root
@@ -77,4 +77,44 @@ write_files:
     content: |
         [Service]
         Environment=DOCKER_OPTS='--insecure-registry=10.0.0.0/8,dockerhub.coreos-cluster.local'
+
+  - path: /opt/bin/etcd-init.sh
+    permissions: 0700
+    owner: root
+    content: |
+      #!/bin/bash
+      
+      # dyamically create/join the etcd cluster by querying autoscaling group
+      # see https://github.com/dockerage/etcd-aws-cluster
+      image=dockerage/etcd-aws-cluster
+      /usr/bin/docker run -v /etc/sysconfig/:/etc/sysconfig/ $image /etcd-aws-cluster
+      
+      # upload etcd initial-cluster urls to s3 bucket for worker cluster's etcd_proxy
+      /usr/bin/docker run -v /etc/sysconfig/:/etc/sysconfig/ $image /etcd-aws-proxy
+
+  - path: /etc/aws/account.envvars
+    permissions: 0644
+    owner: root
+    content: |
+        AWS_ACCOUNT=${AWS_ACCOUNT}
+        AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+        CLUSTER_NAME=coreos-cluster
+  - path: /root/.aws/envvars
+    permissions: 0600
+    owner: root
+    content: |
+        AWS_ACCOUNT=${AWS_ACCOUNT}
+        AWS_USER=${AWS_USER}
+        AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+        AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+        AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+  - path: /root/.aws/config
+    permissions: 0600
+    owner: root
+    content: |
+        [default]
+        aws_access_key_id=${AWS_ACCESS_KEY_ID}
+        aws_secret_access_key=${AWS_SECRET_ACCESS_KEY}
+        region=${AWS_DEFAULT_REGION}
+
 
