--- a/envs.sh.sample
+++ b/envs.sh.sample
@@ -4,6 +4,6 @@ export CLUSTER_NAME=my-cluster
 export REGION=us-west-2
 # If you have a private repo needs to be synced to host under /var/lib/app. :
 #export APP_REPOSITORY=git@example.com:user/app-repo.git
-#export APP_REPOSITORY_DEPLOYKEY=./resources/secrets/app-deploy-key.pem.yaml
+#export APP_REPOSITORY_DEPLOYKEY=/path/to/private/app-deploy-key.pem.yaml
 # If you have a public repo
 #export APP_REPOSITORY=https://github.com/user/app-repo.git
